hphp/test/zend/good/Zend/tests/div_002.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot perform mathematical operation on HH\vec and HH\vec' in %s/div_002.php:6
Stack trace:
%A
